--- a/assets/main.css
+++ b/assets/main.css
@@ -1,6 +1,6 @@
 body {
   height: 150vh;
-width: 100vh;
+width: 50vh;
   background:#E89E80;
   margin: 0%;
 }
@@ -8,6 +8,8 @@ width: 100vh;
 .text-1 {
   position: relative;
   top: 50px;
+  left: 400px;
+  padding-right: 20%;
   display: flex;
   justify-content: center;
   text-align: center;
@@ -20,12 +22,14 @@ width: 100vh;
 .text-2 {
     position: relative;
   top: 350px;
+    left: 400px;
+  padding-right: 20%;
 display: flex;
    justify-content: center;
   text-align: center;
   color: white;
   font-family: helvetica;
-  font-size: 18px;
+  font-size: 30px;
 
 }
 
@@ -33,33 +37,36 @@ display: flex;
 .text-3 {
   position: relative;
  top: 650px;
+   left: 400px;
+  padding-right: 20%;
   display: flex;
    justify-content: center;
   text-align: center;
   color: white;
   font-family: helvetica;
-  font-size: 20px;
+  font-size: 30px;
 
 }
 
 .text-4 {
       position: relative;
   top: 950px;
- 
+   left: 400px;
+  padding-right: 20%;
   display: flex;
    justify-content: center;
   text-align: center;
   color: white;
   font-family: helvetica;
-  font-size: 20px;
+  font-size: 30px;
 
 }
  .background {
   background-color: #BCC29D;
   position: fixed;
-top: 0;
+  top: 0;
   bottom: 0;
-left: 0;
+  left: 0;
   height: 250vh;
   width: 15%;
   border-right: 6px solid black;
@@ -67,13 +74,13 @@ left: 0;
   text-decoration: none;
 
 }
-
+}
 
 
 @media only screen and (min-width: 800px) {
   body {
   height: 150vh;
-width: 100vh;
+width: 100vw;
   background:#E89E80;
   margin: 0%;
 }
@@ -92,7 +99,7 @@ left: 0;
 }
 .text-1 {
   position: relative;
-  left: 50%;
+  left: 60%;
   top: 50px;
   display: flex;
   justify-content: center;
@@ -107,7 +114,7 @@ left: 0;
 .text-2 {
     position: relative;
   top: 450px;
-    left: 50%;
+    left: 60%;
 display: flex;
    justify-content: center;
   text-align: center;
@@ -120,7 +127,7 @@ display: flex;
   .text-3 {
   position: relative;
  top: 850px;
-   left: 50%;
+   left: 60%;
   display: flex;
    justify-content: center;
   text-align: center;
@@ -132,7 +139,7 @@ display: flex;
 .text-4 {
       position: relative;
   top: 1250px;
-   left: 50%;
+   left: 60%;
   display: flex;
    justify-content: center;
   text-align: center;
